--- a/src/main/resources/data/constructiondimension/worldgen/biome/construction_biome.json
+++ b/src/main/resources/data/constructiondimension/worldgen/biome/construction_biome.json
@@ -1,7 +1,7 @@
 {
-  "temperature": 0.7,
-  "downfall": 0,
-  "has_precipitation": false,
+  "temperature": 0.6,
+  "downfall": 0.7,
+  "has_precipitation": true,
   "effects": {
     "sky_color": 13434879,
     "fog_color": 13434853,
